# hello-world

./: .gitignore  README.md  pyproject.toml
stockscanner/: __init__.py  __main__.py  scanner.py
tests/: test_scanner.py
